# mimalloc_so5_vcpkg_20260403

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
overlays/: portfile.cmake
